# SpectrumCpp

./: .gitignore  AnimatedAudioSource.cpp  AnimatedAudioSource.h  Application.cpp  AudioBuffer.h  AudioCapture.cpp  AudioCapture.h  AudioManager.cpp  AudioManager.h  AudioSettingsPanel.cpp  AudioSettingsPanel.h  BarsRenderer.cpp  BarsRenderer.h  BaseRenderer.cpp  BaseRenderer.h  CMakeLists.txt  CircularWaveRenderer.cpp  CircularWaveRenderer.h  ColorPicker.cpp  ColorPicker.h  ColorWheelGenerator.h  ColorWheelRenderer.h  Common.h  ControlPanel.cpp  ControlPanel.h  ControllerCore.cpp  ControllerCore.h  CubesRenderer.cpp  CubesRenderer.h  D2DHelpers.h  EffectsRenderer.cpp  EffectsRenderer.h  FFTProcessor.cpp  FFTProcessor.h  FireRenderer.cpp  FireRenderer.h  FrequencyMapper.cpp  FrequencyMapper.h  GainNormalizer.cpp  GaugeRenderer.cpp  (+72 more)
.github/workflows/: cmake-single-platform.yml
App/: Application.cpp  ControllerCore.cpp  ControllerCore.h
Audio/: AudioManager.cpp  AudioManager.h
Audio/Capture/: AudioCapture.cpp  AudioCapture.h  AudioCaptureEngine.cpp  AudioCaptureEngine.h  WASAPIHelper.cpp  WASAPIHelper.h
Audio/Processing/: AudioBuffer.cpp  AudioBuffer.h  FFTProcessor.cpp  FFTProcessor.h  FrequencyMapper.cpp  FrequencyMapper.h  GainNormalizer.cpp  GainNormalizer.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumPostProcessor.cpp  SpectrumPostProcessor.h
Audio/Sources/: AnimatedAudioSource.cpp  AnimatedAudioSource.h  IAudioSource.h  RealtimeAudioSource.cpp  RealtimeAudioSource.h
Common/: ColorUtils.cpp  ColorUtils.h  Common.h  EventBus.h  Logger.h  PlatformUtils.h  Random.cpp  Random.h  StringUtils.cpp  StringUtils.h  TemplateUtils.h  Timer.cpp  Timer.h  Types.h
Graphics/: IRenderer.h  RendererManager.cpp  RendererManager.h  RenderersController.cpp  RenderersController.h
Graphics/API/: Canvas.cpp  Canvas.h  D2DHelpers.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsHelpers.h
Graphics/API/Brushes/: GradientStop.h  IBrush.h  LinearGradientBrush.h  RadialGradientBrush.h  SolidColorBrush.h
Graphics/API/Core/: DeviceResourceManager.cpp  DeviceResourceManager.h  DrawStateController.cpp  DrawStateController.h  GeometryBuilder.cpp  GeometryBuilder.h  IRenderComponent.h  RenderEngine.cpp  RenderEngine.h  ResourceCache.cpp  ResourceCache.h  TransformManager.cpp  TransformManager.h
Graphics/API/Enums/: PaintEnums.h  RenderEnums.h  TextEnums.h
Graphics/API/Helpers/: D2DScopes.h  EnumConversion.h  HResultHelpers.h  MathConstants.h  Sanitization.h  TypeConversion.h  Validation.h
Graphics/API/Helpers/Core/: Sanitization.h  Validation.h
Graphics/API/Helpers/D2D/: D2DScopes.h  RenderTargetHelpers.h
Graphics/API/Helpers/Geometry/: ColorHelpers.cpp  ColorHelpers.h  GeometryHelpers.h
Graphics/API/Helpers/Math/: MathHelpers.h
Graphics/API/Helpers/Platform/: GdiHelpers.h  WindowHelpers.h
Graphics/API/Helpers/Rendering/: RenderHelpers.cpp  RenderHelpers.h
Graphics/API/Helpers/Utils/: Random.cpp  Random.h  StringUtils.cpp  StringUtils.h  TemplateUtils.h  Timer.cpp  Timer.h
Graphics/API/Renderers/: EffectsRenderer.cpp  EffectsRenderer.h  GradientRenderer.cpp  GradientRenderer.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  SpectrumRenderer.cpp  SpectrumRenderer.h  TextRenderer.cpp  TextRenderer.h
Graphics/API/Structs/: Paint.cpp  Paint.h  StrokeOptions.h  TextStyle.h
Graphics/Base/: BaseRenderer.cpp  BaseRenderer.h  PeakTracker.cpp  PeakTracker.h  RenderUtils.cpp  RenderUtils.h
Graphics/Visualizers/: BarsRenderer.cpp  BarsRenderer.h  CircularWaveRenderer.cpp  CircularWaveRenderer.h  CubesRenderer.cpp  CubesRenderer.h  FireRenderer.cpp  FireRenderer.h  GaugeRenderer.cpp  GaugeRenderer.h  KenwoodBarsRenderer.cpp  KenwoodBarsRenderer.h  LedPanelRenderer.cpp  LedPanelRenderer.h  MatrixLedRenderer.cpp  MatrixLedRenderer.h  ParticlesRenderer.cpp  ParticlesRenderer.h  PolylineWaveRenderer.cpp  PolylineWaveRenderer.h  SphereRenderer.cpp  SphereRenderer.h  WaveRenderer.cpp  WaveRenderer.h
Graphics/Visualizers/Settings/: QualityPresets.h  QualityTraits.h
Platform/: InputManager.cpp  InputManager.h  MainWindow.cpp  MainWindow.h  MessageHandler.cpp  MessageHandler.h  MessageHandlerBase.h  UIMessageHandler.cpp  UIMessageHandler.h  UIWindow.cpp  UIWindow.h  Win32Utils.h  WindowBase.h  WindowHelper.cpp  WindowHelper.h  WindowManager.cpp  WindowManager.h
Platform/Input/: IKeyboard.h  InputManager.cpp  InputManager.h  Win32Keyboard.h
Project Files/: CMakeLists.txt
Resources/: Resource.h  resource.rc.in
UI/: ImGuiContext.h  UIManager.cpp  UIManager.h
UI/Common/: ImGuiHelpers.h  UIFormatters.h  UILayout.h
UI/Components/: UIButton.cpp  UIButton.h  UIButtonColors.h  UISlider.cpp  UISlider.h
UI/Core/: ImGuiContext.cpp  ImGuiContext.h  ImGuiStyles.h  UIManager.cpp  UIManager.h
UI/Panels/: PanelAnimator.h  PanelDrawHelper.h
UI/Panels/AudioSettingsPanel/: AudioSettingsPanel.cpp  AudioSettingsPanel.h
UI/Panels/ColorPicker/: ColorPicker.cpp  ColorPicker.h  ColorWheelGenerator.h  ColorWheelRenderer.cpp  ColorWheelRenderer.h
UI/Panels/ControlPanel/: ControlPanel.cpp  ControlPanel.h
imgui_dll/: CMakeLists.txt
imgui_library/include/: imconfig.h
imgui_library/lib/: imgui.lib
